# learning

./: README.md  cleanup.sh  run.sh
ALGORITHMS-DATA-STRUCT/: README.md  g-1.py
BASICS/: BASICS.md  README.md  array  class-template.cpp  deque.cpp  exception-handling  exception-handling2  exception-handling2.cpp  list  list-forward_list  list.cpp  map  map.cpp  multiset  queue  queue.cpp  set-vector  stack  stack.cpp  template  template.cpp  tuple  vector  vector.cpp
C++/: cleanup.sh  run.sh
C++/BASICS/: README.md  array.cpp  exception-handling1.cpp  list-forward_list.cpp  macros.cpp  marcos  marcos.cpp  multiset.cpp  set-vector.cpp  tuple.cpp  type_def  type_def.cpp
C++/CMAKE_TUTO/: README.md
C++/CMAKE_TUTO/example1/: CMakeLists.txt  README.md  main.cpp
C++/CMAKE_TUTO/example1/lib/MyLib/: stuff.cpp  stuff.hpp
C++/POO/: POO-constructor  POO-first  POO-first.cpp  POO-friend-function.cpp  POO-friend-tow-class.cpp  POO-hierarchical-inheritance.cpp  POO-multilevel-inheritance.cpp  POO-object-as-func-arg.cpp  POO-static-members.cpp  POO-swap-object-of-class.cpp  POO-virtual-base-class.cpp
C++/PROJECTS/: README.md  banking.cpp  bat_stat  bat_stat.cpp  cpu_temp  cpu_temp.cpp  cpu_tempclear  cpu_usage.sh  demo-cpu.txt  xxxx
LearnFromDatasets/: cifar10_mnist.ipynb  fashion_mnist.ipynb
POO/: POO  POO-constructor  POO-constructor.cpp  POO-containership  POO-containership.cpp  POO-destrictor  POO-destrictor.cpp  POO-dynamic-constructor  POO-dynamic-constructor.cpp  POO-first  POO-first.cpp  POO-friend-function  POO-friend-tow-class  POO-friend-use  POO-friend-use.cpp  POO-hierarchical-inheritance  POO-multilevel-inheritance  POO-multiple-inheritance.cpp  POO-multiple-nheritance  POO-multiple-nheritance.cpp  POO-object-as-func-arg  POO-operator-overloading  POO-operator-overloading.cpp  POO-pointers  POO-pointers.cpp  POO-single-inheritance  POO-single-inheritance.cpp  POO-static-member.cpp  POO-static-members  POO-static-members.cpp  POO-swap-object-of-class  POO-virtual-base-class  POO.md  README.md
PROJECTS/: LinkedList  LinkedList.cpp  LinkedListStruct  LinkedListStruct.cpp  README.md  banking
PyTorch/: py_init.ipynb  py_init2.ipynb  py_init3.ipynb  regressiong.ipynb
PyTorch/.ipynb_checkpoints/: py_init-checkpoint.ipynb  py_init2-checkpoint.ipynb
workflows/: run.yml
